# count-unsafe

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: count.rs  main.rs
